x-overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,7 @@
     outline: 1px dashed red;
 }
 */
-* {
-    box-sizing: border-box;
-}
+
 :root {
     /*Color Variables*/
     --primary-color-rgba: rgba(245, 245, 245, 1);
@@ -28,6 +26,9 @@
 
 html {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -35,8 +36,11 @@ body {
     background-color: var(--secondary-color-hsla);
     display: grid;
     grid-template-rows: auto 1fr auto;
-    height: 100%;
-    width: 100%;
+    overflow-x: hidden;
+    max-width: 100vw;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
 
 main {
@@ -65,6 +69,7 @@ main {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 }
 
 .page-header h1 {
